@@ -3368,6 +3368,22 @@
 		<Spanish>When checked, displays the BUG version of the Wonders tab.</Spanish>
 	</TEXT>
 	<TEXT>
+		<Tag>TXT_KEY_BUG_OPT_ADVISORS__BUGINFOWONDERSPLAYERCOLOR_TEXT</Tag>
+		<English>Use Player Color</English>
+		<French>Use Player Color</French>
+		<German>Use Player Color</German>
+		<Italian>Use Player Color</Italian>
+		<Spanish>Use Player Color</Spanish>
+	</TEXT>
+	<TEXT>
+		<Tag>TXT_KEY_BUG_OPT_ADVISORS__BUGINFOWONDERSPLAYERCOLOR_HOVER</Tag>
+		<English>When checked, displays wonders on the BUG version of the Wonders tab using the owning player's color.</English>
+		<French>When checked, displays wonders on the BUG version of the Wonders tab using the owning player's color.</French>
+		<German>When checked, displays wonders on the BUG version of the Wonders tab using the owning player's color.</German>
+		<Italian>When checked, displays wonders on the BUG version of the Wonders tab using the owning player's color.</Italian>
+		<Spanish>When checked, displays wonders on the BUG version of the Wonders tab using the owning player's color.</Spanish>
+	</TEXT>
+	<TEXT>
 		<Tag>TXT_KEY_BUG_OPT_ADVISORS__BUGSTATSTAB_TEXT</Tag>
 		<English>Stats tab</English>
 		<French>Stats tab</French>
